<resources>
    <string name="app_name" translatable="false">Wannareddit</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_add">ADD</string>
    <string name="action_refresh">Refresh</string>
    <string name="noPostDataText">There are no post yet</string>
    <string name="post_filler_text">This is a post of your favorite subreddit place holder.  Please wait until we fetch the real one.</string>
    <string name="subreddit_filler_text">AskReddit</string>
    <string name="Remove">Remove</string>
    <string name="noSubredditText">There are no subreddit yet.\n  Add some to start.\n\n\n\n\n</string>
    <string name="noCommentDataText">There are No comments yet</string>
    <string name="post_title_temp">This place will hold selected subreddit\'s post.  When it happens, it will be a great thing.</string>
    <string name="playMedia" translatable="false">Play media</string>
    <string name="comment_filler_text">This is a the post\'s comment place holder.  Please wait until we fetch the real ones.</string>
    <string name="noConnectivity">The network is not connected, please check.</string>

    <string name="title_add_srddt" translatable="false">Add Another Subreddit</string>
    <string name="content_add_srddt" translatable="false">New name to add</string>
    <string name="hint_add_srddt" translatable="false">askreddit</string>
    <string name="subreddit_not_found">Subreddit %s was not found on the site, could not add.</string>

    <!--Preferences-->
    <string name="pref_subrdd_screentitle" translatable="false">Favorite Subreddit</string>
    <string name="default_subreddit" translatable="false">todayilearned</string>
    <string name="default_postid" translatable="false">123456a</string>
    <string name="pref_subrdd_key" translatable="false">pref_subrdd_key</string>
    <string name="pref_timefence_screentitle" translatable="false">Remind Me After Time Spent</string>
    <string name="default_timefence" translatable="false">2</string>
    <string name="pref_timefence_key" translatable="false">pref_timefence_key</string>

    <string-array name="subreddits" translatable="false">
        <item>Shutupandtakemymoney</item>
        <item>askreddit</item>
        <item>todayilearned</item>
        <item>another</item>
        <item>andanother</item>
        <item>prettygifs</item>
    </string-array>

    <!--Widget support-->
    <string name="a11y_post_widget" translatable="false">I am a wannareddit post</string>
    <string name="title_widget" translatable="false">Wannareddit</string>
    <string name="default_post_text">WannaReddit post -- find interesting stuff for me on my subreddit and on my tab</string>

    <!--A11y support-->
    <string name="a11y_add_srddt">Add new subreddit</string>
    <string name="a11y_activity_srddt">Add or remove subreddits</string>
    <string name="a11y_action_add">Subreddits Menu</string>
    <string name="a11y_add_success">Added %s successfully</string>
    <string name="a11y_dupe_noadd">Subreddit %s already exists</string>
    <string name="a11y_remove_srddt">Remove this subreddit</string>
    <string name="a11y_remove_confirm">Removed %s successfully</string>
    <string name="a11y_remove_error">%s is your Preferred subreddit.  Change your preference first.</string>
    <string name="a11y_refresh_icon">Refresh widget icon</string>
    <string name="a11y_by_who">by %s</string>
    <string name="a11y_num_comments">%d Comments/Threads</string>

    <string name="unknown_response">Could not verify the subreddit name, try later.</string>
    <string name="stat_timeline">20 minutes ago</string>
    <string name="stat_commentnum">5 comments</string>
    <string name="stat_author">wannaauthor</string>

</resources>
