<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
        dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_subrdd_ui_labels"
        android:entryValues="@array/pref_subrdd_values_saved"
        android:key="@string/pref_subrdd_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_subrdd_screentitle"/>

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_timefence_ui_labels"
        android:entryValues="@array/pref_timefence_values_saved"
        android:key="@string/pref_timefence_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_timefence_screentitle"/>

</PreferenceScreen>
