<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailcontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.is.was.be.wannareddit.DetailActivity"
    android:fitsSystemWindows="true"
    tools:ignore="MergeRootFrame"
    >
    <FrameLayout
        android:id="@+id/detailcontainer_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:background="@color/colorPrimary"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/timeline"
                android:text="@string/stat_timeline"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/comments_num"
                android:text="@string/stat_commentnum"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/author_by"
                android:text="@string/stat_author"
                />
        </LinearLayout>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
