<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.is.was.be.wannareddit.DetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:forceHasOverlappingRendering="false">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/post_title_text"
            android:text="@string/post_title_temp"
            android:textSize="24sp"
            android:paddingTop="2dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="start"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed" />

        <ImageButton
            android:id="@+id/media_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/playMedia"
            android:src="@drawable/ic_media_play"/>

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
        />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ListView
                android:id="@+id/listview_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            />
            <!-- empty list -->
            <TextView
                android:id="@+id/recyclerview_comments_empty"
                android:text="@string/noCommentDataText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"

                app:layout_anchor="@+id/recyclerview_comments"
                app:layout_anchorGravity="fill"
                />
       </FrameLayout>
    </LinearLayout>
</ScrollView>